--- a/public/fonts.css
+++ b/public/fonts.css
@@ -11,3 +11,9 @@
   src: url("Cascadia.woff2");
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Muyao";
+  src: url("Muyao-Softbrush.ttf");
+  font-display: swap;
+}
