--- a/public/fonts.css
+++ b/public/fonts.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Muyao";
+  src: url("Muyao-Softbrush.ttf");
+  font-display: swap;
+}
+
 /* http://www.eaglefonts.com/fg-virgil-ttf-131249.htm */
 @font-face {
   font-family: "Virgil";
